--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "types": ["@supabase/ssr"],
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
